[gd_scene load_steps=2 format=2]

[ext_resource path="res://http_request.gd" type="Script" id=1]

[node name="HttpClient" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelAddress" type="Label" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 32.0
text = "Base address"

[node name="TextAddress" type="TextEdit" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 32.0
margin_right = -623.0
margin_bottom = -544.0
text = "http://127.0.0.1:5000"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 72.0
margin_right = 192.0
margin_bottom = 304.0
color = Color( 0.168627, 0.403922, 0.490196, 1 )

[node name="LabelGameId" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 104.0
text = "Game ID"

[node name="TextGameId" type="TextEdit" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 104.0
margin_right = -848.0
margin_bottom = -472.0
text = "1"

[node name="LabelNick" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 144.0
margin_right = 144.0
margin_bottom = 160.0
text = "User nickname"

[node name="TextNick" type="TextEdit" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 160.0
margin_right = -848.0
margin_bottom = -416.0
text = "joanna_dark"

[node name="LabelScore" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 200.0
margin_right = 144.0
margin_bottom = 216.0
text = "Score"

[node name="TextScore" type="TextEdit" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 216.0
margin_right = -848.0
margin_bottom = -360.0
text = "123456"

[node name="ButtonSendScore" type="Button" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 264.0
margin_right = 176.0
margin_bottom = 290.0
text = "send score"

[node name="LabelResponse" type="Label" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 328.0
margin_right = 128.0
margin_bottom = 344.0
text = "Server Response"

[node name="TextResponse" type="TextEdit" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 352.0
margin_right = 1008.0
margin_bottom = 584.0

[connection signal="pressed" from="CanvasLayer/ButtonSendScore" to="." method="_on_ButtonSendScore_pressed"]
